# funcgpt

./: .gitignore  LICENSE  README.md  pyproject.toml
funcgpt/: __init__.py  credentials.py  decorators.py  gpt.py  message.py  protocols.py  tokentools.py  wrapper.py
funcgpt/data/: cl100k_base.tiktoken.bz2
