[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funcgpt"
version = "1.0.0"
authors = [
  { name="Leandro Pereira de Lima e Silva", email="leandro@lls-software.com" },
]
description = "A library to easily create functions based on OpenAI's GPT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
